# SRS_SQL

./: .coverage  .gitignore  README.md  SEPECIFICATIONS.md  TESTS.md  app.py  init_db.py  pyproject.toml  requirements.txt  z_test_db.py
.github/workflows/: check_code_quality.yaml
data/: exercises_sql_tables.duckdb  sql_exercises.duckdb
src/srs_sql/: app.py  db.py  models.py
src/srs_sql/answers/: customers_orders_join.sql  employees_basic_select.sql  employees_filtering.sql  etl_daily_sales.sql  orders_aggregations.sql  sales_window_functions.sql  schema_ddl_changes.sql  trademarks_and_sizes.sql
src/srs_sql/config/: exercises.yml
