[project]
name = "srs-sql"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Garcia", email = "michael.garcia.73@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "streamlit>=1.53.1",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
]

[build-system]
requires = ["uv-build>=0.7.3,<1.0.0"]
build-backend = "uv_build"

[tool.uv]
package = true

# Optional: explicit module root if you ever change layout.
# By default, uv expects src/srs_sql/** for this project name. [web:103]
[tool.uv.build-backend]
module-root = "src/"
