[project]
name = "srs-sql"
version = "0.1.0"
description = "Spaced Repetition SQL app: learn SQL with a system repeating the answers with adjusted spacing to improve memorization."
authors = [
    { name = "Michael Garcia", email = "michael.garcia.73@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "streamlit>=1.53.1",
    "pyyaml>=6.0.0,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv-build>=0.7.3,<1.0.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--cov=srs_sql --cov-report=term-missing"
